# time-discrete-race-simulator

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: lib.rs
gui/src/core/: gui.rs  mod.rs  track.rs
gui/src/interfaces/: mod.rs  racesim_interface.rs
helpers/: Cargo.toml
helpers/src/: buffer.rs  general.rs  geometry.rs  lib.rs
input/parameters/: pars_YasMarina_2017_example.json
input/tracks/: Austin.csv  Budapest.csv  Catalunya.csv  Hockenheim.csv  KualaLumpur.csv  Melbourne.csv  MexicoCity.csv  Montreal.csv  Monza.csv  Nuerburgring.csv  Sakhir.csv  SaoPaulo.csv  Shanghai.csv  Silverstone.csv  Sochi.csv  Spa.csv  Spielberg.csv  Suzuka.csv  YasMarina.csv
racesim/: Cargo.toml
racesim/src/: lib.rs
racesim/src/core/: car.rs  driver.rs  handle_race.rs  mod.rs  race.rs  state_handler.rs  tireset.rs  track.rs
racesim/src/interfaces/: gui_interface.rs  mod.rs
racesim/src/post/: mod.rs  race_result.rs
racesim/src/pre/: check_sim_opts_pars.rs  mod.rs  read_sim_pars.rs  sim_opts.rs
